js structor has changed

--- a/sales.html
+++ b/sales.html
@@ -4,20 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <!--I got the information about facion from here https://www.w3schools.com/tags/att_link_sizes.asp -->
+  <link rel="icon" href="images/companyfacion.gif" type="image/gif" sizes="16x16">
+  <title>Pat's Cookies</title>
 </head>
 <body>
   <nav id="navbox"> 
-    <ul> 
-    <li><a href ="index.html">home</a></li>
-    <li><a href ="sales.html">Owner Information</a></li>  
+    <ul id ="navul"> 
+    <li id="navli"><a href ="sales.html">Owner Information</a></li>
+    <li><a href ="sales.html">Owner Information</a></li>
+    <li><a href ="storesales.html">Owner Information</a></li>  
     </ul>
   </nav>
-  <div id ="textcontent"></div>
-  <div id ="storehours"></div>
-  <div id ="storelocations"></div>
-  <footer>
-    <h2 id="footerbox"> </h2>
+  <!--found information for navigation bars here https://www.w3schools.com/css/css_navbar.asp-->
+  <div id ="visitorcontent">
+    <img id ="companymascot"src="images/salmonmascot.png" alt="carton picture of a salmon">
+  </div>
+  <div id ="storeinformation">
+    <p>storeinformation</p>
+  </div>
+  <div id ="storelocations">
+    <p>storelocations</p>
+  </div>
+  <footer id="footerbox">
+    <p>All information on this site is fiction. This is Code Fellows Class 201 Feb 2020</p>
   </footer>
   <script src="apps.js"></script>
 </body>
