update with cell info

--- a/sales.html
+++ b/sales.html
@@ -9,26 +9,17 @@
   <title>Pat's Cookies</title>
 </head>
 <body>
-  <nav id="navbox"> 
-    <ul id ="navul"> 
-    <li id="navli"><a href ="sales.html">Owner Information</a></li>
-    <li><a href ="sales.html">Owner Information</a></li>
-    <li><a href ="storesales.html">Owner Information</a></li>  
-    </ul>
-  </nav>
-  <!--found information for navigation bars here https://www.w3schools.com/css/css_navbar.asp-->
-  <div id ="visitorcontent">
-    <img id ="companymascot"src="images/salmonmascot.png" alt="carton picture of a salmon">
-  </div>
+  
   <div id ="storeinformation">
-    <p>storeinformation</p>
+    
+
+    <table>
+      <tbody id="storedata">
+        
+      </tbody>
+    </table>
   </div>
-  <div id ="storelocations">
-    <p>storelocations</p>
-  </div>
-  <footer id="footerbox">
-    <p>All information on this site is fiction. This is Code Fellows Class 201 Feb 2020</p>
-  </footer>
+  
   <script src="apps.js"></script>
 </body>
 </html>
