--- a/indexmain.html
+++ b/indexmain.html
@@ -5,13 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <title>testing</title>
+  <title>Sales</title>
 </head>
 <body>
-  
-  <h1>Owner Information Only</h1>
+  <h1>Store Sales Data</h1>
     
-    <div id="divfour">
+    <section id="divfour">
       <table>
         <tbody id="tablebody">
           <th id="salestable">
@@ -19,24 +18,20 @@
           </th>
         </tbody>
       </table>
-    </div>
+    </section>
     <h3>User Inputs Below</h3>
-    <fieldset>
     <form id="formOne">
       <label for="This is a form"></label>
-      <input type="text" name="name" id="NameForm">
+      <input type="text" name="banana" id="NameForm">
 
       <label for="This is a form"></label>
-      <input type="number" name="minCust" id="minCustForm">
+      <input type="text" name="banana" id="NameForm">
 
       <label for="This is a form"></label>
-      <input type="number" name="maxCust" id="maxCustForm">
-
-      <label for="This is a form"></label>
-      <input type="number" name="avgCookiePerCust" id="avgCookieForm">
+      <input type="number" name="banana" id="NameForm">
       <button action="click" id="click">Enter</button>
-    </form>  
-  </fieldset>
+    </form>
+  </setion>
     
   <script src ="apps.js"></script>
   
