--- a/table.html
+++ b/table.html
@@ -6,10 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
   <link rel="icon" href="images/companyfacion.gif" type="image/gif" sizes="16x16">
-  <title>Sales</title>
+  <title>Table of Sales</title>
 </head>
-<body id="salesbody">
+<body id="salestablebody">
   <header>
     <nav>
           <a  href="index.html"><img id="home"  src="images/home.png" alt="icon of the website black background red shield and words that say code fellows"></a> 
@@ -26,7 +27,7 @@
   </header>
   <!--story table is below-->
   <main>
-    <h1>Store Stats per hour</h1>
+    <h1>Sales Data For All Stores</h1>
     
     <div id="divfour">
       <table >
@@ -47,8 +48,18 @@
 
   <!--story user form is below-->
   <section>
-    <h2>All store information</h2>
-   
+    <h2>User Inputs Below</h2>
+    <form id="formOne">
+      <label for="This is a form"></label>
+      <input type="text" name="banana" id="NameForm">
+
+      <label for="This is a form"></label>
+      <input type="text" name="banana" id="NameForm">
+
+      <label for="This is a form"></label>
+      <input type="number" name="banana" id="NameForm">
+      <button action="click" id="click">Enter</button>
+    </form>
   </section>
   <footer>
     <p id="footerparagraph">All information is fictional</p>
