changes to user forms

--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
           <td>Paris</td>
           <td>Lima</td>
         </tr>
-    </tbody>
+    </tbody></br>
+    <p>New Store are opening soon</p>
       
   </section>
+  
 
   <footer>
     <p id="footerparagraph">All information is fictional</p>
